--- a/_includes/jsloads.html
+++ b/_includes/jsloads.html
@@ -9,6 +9,8 @@
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
+<script src="https://kit.fontawesome.com/42a187197b.js" crossorigin="anonymous"></script>
+
 <!--   file where we handle all the script from the Gaia - Bootstrap Template   -->
 <script type="text/javascript" src="{{ '/assets/js/gaia.js' | relative_url }}"></script>
 
@@ -18,11 +20,12 @@
           inlineMath: [
               ['$', '$'],
               ['[latex]', '[/latex]'],
-              ["\\(", "\\)"]
+              ['\\(', '\\)'],
           ],
           displayMath: [             // start/end delimiter pairs for display math
               ['$$', '$$'],
-              ['\\[', '\\]']
+              ['\\[', '\\]'],
+              ['\[', '\]'],
           ],
       }
   };
