--- a/assets/css/jameshoward.css
+++ b/assets/css/jameshoward.css
@@ -91,6 +91,13 @@ figure {
   letter-spacing: 0;
 }
 
+.front-page-arrow {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .m-0 { margin:0!important; }
 .m-1 { margin:.25rem!important; }
 .m-2 { margin:.5rem!important; }
