--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar bar2"></span>
                 <span class="icon-bar bar3"></span>
             </button>
-            <a href="/" class="navbar-brand">
+            <a href="{{ site.url }}" class="navbar-brand">
                 <img src="{{ '/assets/img/identity/jameshoward-logo-horizontal.svg' | relative_url }}">
             </a>
         </div>
