--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,35 +26,33 @@
                 </div>
             </div>
             <div class="col-md-6 col-sm-6">
-                <h5 class="title">Follow me on</h5>
-                <nav>
-                <ul>
-                    {% for item in site.data.settings.social_media %}
-                    <div class="col-md-4">
-                        <li>
-                            <a href="{{ item.url }}">
-                                <i class="fa-brands fa-{{ item.icon }} fa-fw"></i>&nbsp;&nbsp;{{ item.name }}
-                            </a>
-                        </li>
-                    </div>
-                    {% endfor %}
-                </ul>
-                </nav>
+                <div class="info row">
+                    <h5 class="title">Follow me on</h5>
+                    <nav>
+                        <ul>
+                            {% for item in site.data.settings.social_media %}
+                            <div class="col-md-4">
+                                <li>
+                                    <a href="{{ item.url }}">
+                                        <i class="fa-brands fa-{{ item.icon }} fa-fw"></i>&nbsp;&nbsp;{{ item.name }}
+                                    </a>
+                                </li>
+                            </div>
+                            {% endfor %}
+                        </ul>
+                    </nav>
+                </div>
             </div>
         </div>
         <hr>
-        <div class="row" style="margin-bottom: 2rem;">
-            <div class="col-lg-6 col-md-6 col-sm-6 col-6">
-                <div class="row">
-                    <div class="col-lg-2 col-md-2 col-sm-12 col-12">
-                        <a href="https://basuhoward.org"><img src="{{ '/assets/img/identity/bh-flag-1x1.svg' | relative_url }}" style="border: 1px #f8f8f8 solid;" width="50em" /></a>
-                    </div>
-                    <div class="col-lg-10 col-md-10 col-sm-12 col-12">
-                        <p>jameshoward.us<br/>A website of the House of Basu-Howard</p>
-                    </div>
-                </div>
+        <div class="row" style="margin-top: 2rem; margin-bottom: 2rem;">
+            <div class="col-lg-1 col-md-1 col-sm-1 col-1">
+                <a href="https://basuhoward.org"><img src="{{ '/assets/img/identity/bh-flag-1x1.svg' | relative_url }}" style="border: 1px #f8f8f8 solid;" width="50em" /></a>
             </div>
-            <div class="col-lg-6 col-md-6 col-sm-6 col-12">
+            <div class="col-lg-5 col-md-5 col-sm-5 col-5">
+                <p>jameshoward.us<br/>A website of the House of Basu-Howard</p>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 col-6">
                 <p class="text-right"><br/>Copyright &copy; 1997-{{ 'now' | date: "%Y" }} James P. Howard, II</p>
             </div>
         </div>
