--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -46,10 +46,10 @@
         </div>
         <hr>
         <div class="row" style="margin-top: 2rem; margin-bottom: 2rem;">
-            <div class="col-lg-1 col-md-1 col-sm-1 col-1">
+            <div class="col-lg-1 col-md-1 col-sm-1 col-1 pr-0">
                 <a href="https://basuhoward.org"><img src="{{ '/assets/img/identity/bh-flag-1x1.svg' | relative_url }}" style="border: 1px #f8f8f8 solid;" width="50em" /></a>
             </div>
-            <div class="col-lg-5 col-md-5 col-sm-5 col-5">
+            <div class="col-lg-5 col-md-5 col-sm-5 col-5 pl-0 my-auto">
                 <p>jameshoward.us<br/>A website of the House of Basu-Howard</p>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6 col-6">
