--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,8 +2,26 @@
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" sizes="96x96" href="{{ '/assets/img/identity/favicon.svg' | relative_url }}">
 
+    {% assign title = page.title %}
+    {% if page.tag %}
+      {% assign title = title | append: page.tag %}
+    {% endif %}
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>{{ page.title }} | James Howard</title>
+    <title>{{ title }} | James Howard</title>
+    <meta name="description" content="{{ page.description }}">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="{{ title }}">
+    <meta name="twitter:description" content="{{ page.description }}">
+    <meta name="twitter:image:src" content="{{ page.featured_image | absolute_url }}">
+
+    <!-- Facebook OpenGraph -->
+    <meta property="og:title" content="{{ title }}" />
+    <meta property="og:description" content="{{ page.description }}" />
+    <meta property="og:image" content="{{ page.featured_image | absolute_url }}" />
+
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <link href="{{ '/assets/css/bootstrap.css' | relative_url }}" rel="stylesheet" />
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
