--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,6 +2,11 @@
 layout: base
 ---
 
+{% assign title = page.title %}
+{% if page.tag %}
+  {% assign title = title | append: " " | append: page.tag %}
+{% endif %}
+
 <div class="section section-header-blog">
     <div class="parallax filter filter-color-black">
         {% if page.featured_image %}
@@ -11,7 +16,7 @@ layout: base
         {% endif %}
         <div class="container">
             <div class="content">
-                <h1>{{ page.title }}</h1>
+                <h1>{{ title }}</h1>
                 <div class="separator separator"><img src="{{ '/assets/img/martlet.svg' | relative_url }}" height="35rem" /></div>
             </div>
         </div>
