--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,15 @@ layout: base
                 <h1>{{ page.title }}</h1>
                 <h3 class="subtitle">{{ page.date | date: "%A %B %d, %Y" }}</h3>
                 <div class="separator separator"><img src="{{ '/assets/img/martlet.svg' | relative_url }}" height="35rem" /></div>
+                <div class="card-blog">
+                    <h6 class="card-category text-danger"><nobr>&bull;&nbsp;
+                            {% for tag in page.tags %}
+                            {% capture tag_name %}{{ tag }}{% endcapture %}
+                            {% assign tag_slug = tag_name | slugify %}
+                            <a href="{{ '/tag/' | append: tag_slug | relative_url }}" class="card-category text-danger" style="display: inline;">{{ tag_name }}</a>&nbsp;&bull;&nbsp;</nobr>
+                        {% endfor %}
+                    </h6>
+                </div>
             </div>
         </div>
     </div>
