--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -36,7 +36,7 @@
                 <li class="dropdown">
                     <form action="/search" method="get">
                         <div class="form-group">
-                            <input type="search" name="sidebar-search" name="q" placeholder="SEARCH..." class="form-control form-control-plain search-box" />
+                            <input type="search" name="q" placeholder="SEARCH..." class="form-control form-control-plain search-box" />
                         </div>
                     </form>
                 </li>
