Patch font formatting on the footer

--- a/assets/css/jameshoward.css
+++ b/assets/css/jameshoward.css
@@ -87,6 +87,9 @@ figure {
 
   .jh-copyright {
     text-align: center;
+        font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
+    color: #777;
+    font-weight: bold;
   }
 
   .basu-howard-banner {
@@ -94,11 +97,20 @@ figure {
     justify-content: center;
     align-items: center;
   }
+
+  .basu-howard-text {
+      font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
+    color: #777;
+    font-weight: bold;
+}
 }
 
 @media (min-width: 768px) {
   .jh-copyright {
     text-align: right;
+    font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
+    color: #777;
+    font-weight: bold;
   }
 
   .basu-howard-banner {
@@ -113,6 +125,9 @@ figure {
   .basu-howard-text {
     display: inline-block;
     vertical-align: bottom;
+    font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
+    color: #777;
+    font-weight: bold;
   }
 }
 
