--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,16 +15,21 @@
       {% assign featured_image = page.featured_image %}
     {% endif %}
 
+    {% assign desc = page.content | markdownify | strip_html | truncatewords: 30 %}
+    {% if page.subtitle %}
+        {% assign desc = page.subtitle | markdownify | strip_html %}
+    {% endif %}
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>{{ title }}</title>
 
     <meta name="title" content="{{ title }}" />
     <meta name="author" content="James" />
-    <meta name="description" content="{{ page.subtitle }}" />
+    <meta name="description" content="{{ desc }}" />
 
     <meta property="og:title" content="{{ title }}" />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:description" content="{{ page.subtitle }}" />
+    <meta property="og:description" content="{{ desc }}" />
     <meta property="og:url" content="{{ page.url }}" />
     <meta property="og:site_name" content="James Howard" />
     <meta property="og:image" content="{{ featured_image | relative_url }}" />
