--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-6">
                 <div class="info">
-                    <h5 class="title">Other Sites</h5>
+                    <h2 class="title">Other Sites</h2>
                     <nav>
                         <ul>
                             {% for item in site.data.settings.other_sites %}
@@ -15,7 +15,7 @@
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-6">
                 <div class="info">
-                    <h5 class="title">Notices</h5>
+                    <h2 class="title">Notices</h2>
                     <nav>
                         <ul>
                             {% for item in site.data.settings.notices %}
@@ -27,19 +27,19 @@
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12">
                 <div class="info">
-                    <h5 class="title">Follow me on</h5>
+                    <h2 class="title">Follow me on</h2>
                     <nav>
-                        <ul>
-                            {% for item in site.data.settings.social_media %}
-                            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 col-6">
-                                <li>
+                        <div class="row">
+                            <ul class="social-media-menu">
+                                {% for item in site.data.settings.social_media %}
+                                <li class="col-lg-4 col-md-4 col-sm-6 col-xs-6 col-6">
                                     <a href="{{ item.url }}">
                                         <i class="fa-brands fa-{{ item.icon }} fa-fw"></i>&nbsp;&nbsp;{{ item.name }}
                                     </a>
                                 </li>
-                            </div>
-                            {% endfor %}
-                        </ul>
+                                {% endfor %}
+                            </ul>
+                        </div>
                     </nav>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                 <div class="basu-howard-banner">
                     <div class="basu-howard-flag">
                         <a href="https://basuhoward.org">
-                            <img src="{{ '/assets/img/identity/bh-flag-1x1.svg' | relative_url }}" style="border: 1px #f8f8f8 solid;" width="40em" />
+                            <img src="{{ '/assets/img/identity/bh-flag-1x1.svg' | relative_url }}" style="border: 1px #f8f8f8 solid;" width="40em" alt="Banner of the House of Basu-Howard" />
                         </a>
                     </div>
                     <div class="info ml-4 mt-0 basu-howard-text">jameshoward.us<br/>A website of the House of Basu-Howard</div>
