Shrink h1 on mobile

--- a/assets/css/jameshoward.css
+++ b/assets/css/jameshoward.css
@@ -148,7 +148,11 @@ figure {
       font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #f8f8f8;
     font-weight: bold;
-}
+  }
+
+  .content h1 {
+    font-size: 180%;
+  }
 }
 
 @media (min-width: 768px) {
