--- a/assets/css/jameshoward.css
+++ b/assets/css/jameshoward.css
@@ -100,6 +100,12 @@ figure {
   margin: 1em;
 }
 
+.img-border {
+  border-color: #303030;
+  border-style: solid;
+  border-width: 1px;
+}
+
 .featured-image-post {
   margin-top: -5em;
   z-index: 100;
