Move primary logos to inline SVG

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -48,9 +48,9 @@
         <div class="row" style="margin-top: 2rem; margin-bottom: 2rem;">
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 col-12">
                 <div class="basu-howard-banner">
-                    <div class="basu-howard-flag">
+                    <div class="basu-howard-flag" >
                         <a href="https://basuhoward.org">
-                            <img src="{{ '/assets/img/identity/bh-flag-1x1.svg' | relative_url }}" style="border: 1px #f8f8f8 solid;" width="40em" alt="Banner of the House of Basu-Howard" />
+                            {% svg '/assets/img/identity/bh-flag-1x1.svg' alt="Banner of the House of Basu-Howard" %}
                         </a>
                     </div>
                     <div class="info ml-4 mt-0 basu-howard-text">jameshoward.us<br/>A website of the House of Basu-Howard</div>
