Forgot to load GA

--- a/_includes/jsloads.html
+++ b/_includes/jsloads.html
@@ -40,4 +40,5 @@
   });
 </script>
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FSDET4HG4L"></script>
 <script src="{{ '/assets/js/cookiealert.js' | relative_url }}"></script>
