--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,6 +41,10 @@
     <meta name="twitter:site" content="@k3jph" />
     <meta name="twitter:creator" content="@k3jph" />
 
+    {% unless page.sitemap == false %}
+    <meta name="robots" content="noindex" />
+    {% endunless %}
+
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=10.0, user-scalable=1' name='viewport' />
     <link href="{{ '/assets/css/bootstrap.css' | relative_url }}" rel="stylesheet" />
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
