--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -50,10 +50,10 @@
                 <div class="basu-howard-banner">
                     <div class="basu-howard-flag" >
                         <a href="https://basuhoward.org">
-                            {% svg '/assets/img/identity/bh-flag-1x1.svg' alt="Banner of the House of Basu-Howard" %}
+                            {% svg '/assets/img/identity/jh-badge-1x1.svg' alt="Badge of James Howard" %}
                         </a>
                     </div>
-                    <div class="info ml-4 mt-0 basu-howard-text">jameshoward.us<br/>A website of the House of Basu-Howard</div>
+                    <div class="info ml-4 mt-0 basu-howard-text">jameshoward.us<br/>A website of James Howard</div>
                 </div>
             </div>
             <div class="info col-lg-6 col-md-6 col-sm-6 col-xs-12 col-12">
