--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -49,7 +49,7 @@
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 col-12">
                 <div class="basu-howard-banner">
                     <div class="basu-howard-flag" >
-                        <a href="https://basuhoward.org">
+                        <a href="https://jameshoward.us">
                             {% svg '/assets/img/identity/jh-badge-1x1.svg' alt="Badge of James Howard" %}
                         </a>
                     </div>
