--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,6 +7,8 @@ layout: base
   {% assign title = title | append: " " | append: page.tag %}
 {% endif %}
 
+{% assign subtitle = page.subtitle %}
+
 <div class="section section-header-blog">
     <div class="parallax filter filter-color-black">
         {% if page.featured_image %}
@@ -16,8 +18,10 @@ layout: base
         {% endif %}
         <div class="container">
             <div class="content">
-                <h1>{{ title }}</h1>
+                <h1>{{ title | markdownify | remove: '<p>' | remove: '</p>' }}</h1>
                 <div class="separator separator"><img src="{{ '/assets/img/martlet.svg' | relative_url }}" height="35rem" /></div>
+                <span class="card-category section-subtitle">{{ subtitle | markdownify }}</span>
+                </div>
             </div>
         </div>
     </div>
