--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="info col-lg-6 col-md-6 col-sm-6 col-xs-12 col-12">
-                <div class="jh-copyright"><br/>Copyright &copy; 1997-{{ 'now' | date: "%Y" }} James P. Howard, II</div>
+                <div class="jh-copyright"><br/><a href="">Copyright &copy; 1997-{{ 'now' | date: "%Y" }}</a> James P. Howard, II</div>
             </div>
         </div>
 </footer>
