--- a/_includes/jsloads.html
+++ b/_includes/jsloads.html
@@ -10,6 +10,9 @@
 
 <script src="https://kit.fontawesome.com/42a187197b.js" crossorigin="anonymous"></script>
 
+<link rel="stylesheet" href="https://cdn.datatables.net/2.1.7/css/dataTables.dataTables.css" />
+<script src="https://cdn.datatables.net/2.1.7/js/dataTables.js"></script>
+
 <!--   file where we handle all the script from the Gaia - Bootstrap Template   -->
 <script type="text/javascript" src="{{ '/assets/js/gaia.js' | relative_url }}"></script>
 
