--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,7 +9,7 @@
                 <span class="icon-bar bar3"></span>
             </button>
             <a href="{{ site.url | relative_url }}" class="navbar-brand">
-                {% svg '/assets/img/identity/jameshoward-logo-horizontal.svg' alt="Primary menu logo" %}
+                {% svg '/assets/img/identity/jameshoward-shield.svg' alt="James Howard escutcheon and wordmark" %}
             </a>
         </div>
         <div class="collapse navbar-collapse">
