Add NSDEQ ribbon and rebuild ribbon infrastructure for greater flexibility

--- a/_includes/jsloads.html
+++ b/_includes/jsloads.html
@@ -1,6 +1,6 @@
 <!--   core js files    -->
-<script src="{{ '/assets/js/jquery.min.js' | relative_url }}" type="text/javascript"></script>
-<script src="{{ '/assets/js/bootstrap.js' | relative_url }}" type="text/javascript"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 
 <!--  js library for devices recognition -->
 <script type="text/javascript" src="{{ '/assets/js/modernizr.js' | relative_url }}"></script>
@@ -10,8 +10,6 @@
 
 <script src="https://kit.fontawesome.com/42a187197b.js" crossorigin="anonymous"></script>
 
-<link rel="stylesheet" href="https://cdn.datatables.net/2.1.7/css/dataTables.dataTables.css" />
-<script src="https://cdn.datatables.net/2.1.7/js/dataTables.js"></script>
 
 <!--   file where we handle all the script from the Gaia - Bootstrap Template   -->
 <script type="text/javascript" src="{{ '/assets/js/gaia.js' | relative_url }}"></script>
