--- a/_includes/head.html
+++ b/_includes/head.html
@@ -46,7 +46,7 @@
     {% endunless %}
 
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=10.0, user-scalable=1' name='viewport' />
-    <link href="{{ '/assets/css/bootstrap.css' | relative_url }}" rel="stylesheet" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
     <script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></script>
     <link href="{{ '/assets/css/gaia.css' | relative_url }}" rel="stylesheet"/>
