fix noindex problem

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,9 +41,9 @@
     <meta name="twitter:site" content="@k3jph" />
     <meta name="twitter:creator" content="@k3jph" />
 
-    {% unless page.sitemap == false %}
+    {% if page.sitemap == false %}
     <meta name="robots" content="noindex" />
-    {% endunless %}
+    {% endif %}
 
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=10.0, user-scalable=1' name='viewport' />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
