Thiel-Sen estimators

--- a/_includes/jsloads.html
+++ b/_includes/jsloads.html
@@ -30,6 +30,10 @@
   };
 </script>
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/panda-syntax-dark.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+<script>hljs.highlightAll();</script>
+
 <script>
   imagesLoaded( document.querySelector('#masonry-container'), function( instance ) {
       var msnry = new Masonry('#masonry-container', {
