Vertical centering of the accent image

--- a/assets/css/jameshoward.css
+++ b/assets/css/jameshoward.css
@@ -85,6 +85,10 @@ a {
   opacity: inherit;
 }
 
+.section .image {
+  height:100%;
+}
+
 .content-blog {
   font-family: "Camdo","Times New Roman",serif;
   a {
