Fix the tag title

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
 
     {% assign title = page.title %}
     {% if page.tag %}
-      {% assign title = title | append: page.tag %}
+      {% assign title = title | append: " " | append: page.tag %}
     {% endif %}
 
     {% assign title_formatted = title | markdownify | strip_html %}
