--- a/_includes/jsloads.html
+++ b/_includes/jsloads.html
@@ -46,3 +46,5 @@
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-FSDET4HG4L"></script>
 <script src="{{ '/assets/js/cookiealert.js' | relative_url }}"></script>
+
+<script src="{{ '/assets/js/ukraine.js' | relative_url }}" defer></script>
