--- a/assets/css/ukraine.css
+++ b/assets/css/ukraine.css
@@ -5,6 +5,7 @@
   font-weight: bold;
   border: 5px solid;
   border-image-slice: 1;
+  z-index: 100;
   border-image-source: linear-gradient(0deg, rgb(255, 213, 0) 0%, rgb(255, 213, 0) 47%, rgb(0, 91, 187) 47%, rgb(0, 91, 187) 100%);
 }
 .ukb-light {
