Add Mastodon ID

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,6 +41,8 @@
     <meta name="twitter:site" content="@k3jph" />
     <meta name="twitter:creator" content="@k3jph" />
 
+    <meta name="fediverse:creator" content="@k3jph@mastodon.social">
+
     {% if page.sitemap == false %}
     <meta name="robots" content="noindex" />
     {% endif %}
